글자 정렬 수정 및 폰트 사이즈 조정

--- a/ERB/SHOP_TROPHY.ERB
+++ b/ERB/SHOP_TROPHY.ERB
@@ -248,9 +248,9 @@ ELSE
 
 		CALL PRINT_ACHIEVEMENT(211,"패자(覇者)의 증표","세이브 따위는 내게 사치야！",50,"１회차에서 세이브＆로드 없이 클리어","","※１회차 한정")
 		CALL PRINT_ACHIEVEMENT(212,"엉터리 대마왕","오히려 칭찬해 주고 싶다",50,"１회차에서 종합 Ｅ랭크","※캐릭터 메이킹 소질：사망 해금","")
-		CALL PRINT_ACHIEVEMENT(213,"eraGVT 마스터","１회차에서 최고 스코어를 목표로 하는 것이다！",50,"１회차에서 종합 Ｓ랭크","※주회 요소：레벨 인계 해금","")
+		CALL PRINT_ACHIEVEMENT(213,"eraGVT 마스터","첫 회차에서 최고를 목표로 하는 게다！",50,"１회차에서 종합 Ｓ랭크","※주회 요소：레벨 인계 해금","")
 		CALL PRINT_ACHIEVEMENT(270,"월등한 최강 대 최강","나 두근두근 거리는데！！",20,"히든 보스를 격파했다","","")
-		CALL PRINT_ACHIEVEMENT(266,"퍼펙트 킬","어딜 보시는 거죠，그건 제 잔상입니다만？",20,"피해를 입지 않고 보스를 격파했다","","")
+		CALL PRINT_ACHIEVEMENT(266,"퍼펙트 킬","어딜 보시나요，그건 제 잔상입니다만？",20,"피해를 입지 않고 보스를 격파했다","","")
 		CALL PRINT_ACHIEVEMENT(220,"마법(물리)소녀","능력을 특화시켜 보자",10,"공격 실수치 500 돌파","","")
 		CALL PRINT_ACHIEVEMENT(221,"근육이 세상을 구한다","최선의 방어는 최고의 공격이다",10,"공격 실수치 1000 돌파","","")
 		CALL PRINT_ACHIEVEMENT(222,"탱커 누가 키웠냐","능력을 특화시켜 보자",10,"방어 실수치 500 돌파","","")
@@ -261,8 +261,8 @@ ELSE
 		CALL PRINT_ACHIEVEMENT(227,"전 L입니다","역시 난… 틀리지 않…았어……",10,"지성 실수치 1000 돌파","","")
 		CALL PRINT_ACHIEVEMENT(228,"불사신의 전사","？？：마법소녀가 쓰러지지 않아",20,"체력 실수치 10000 돌파","","")
 		CALL PRINT_ACHIEVEMENT(229,"Lion Heart","마법소녀라면 4기통 심장은 기본",20,"기력 실수치 10000 돌파","왜 맘이 맘이 자꾸 흔들리니","")
-		CALL PRINT_ACHIEVEMENT(230,"절륜 마법소녀","오죽하면 촉수조차 복상사할 정도라고……",20,"성내성 실수치 1000 돌파","","")
-		CALL PRINT_ACHIEVEMENT(231,"그랜드 마스터","초대 마법소녀도 격투가 주력기라 하더라",20,"근거리 전투기술 Lv9 달성","","")
+		CALL PRINT_ACHIEVEMENT(230,"절륜 마법소녀","오죽하면 촉수가 복상사할 정도라고…",20,"성내성 실수치 1000 돌파","","")
+		CALL PRINT_ACHIEVEMENT(231,"그랜드 마스터","초대 마법소녀도 격투가 주력기라던데",20,"근거리 전투기술 Lv9 달성","","")
 		CALL PRINT_ACHIEVEMENT(232,"전원 집중포화！","어찌 보면 제일 까다로운 포지션",20,"중거리 전투기술 Lv9 달성","","")
 		CALL PRINT_ACHIEVEMENT(233,"백발백중 명 사 수","아 ㅇㄷㅊㅇ",20,"원거리 전투기술 Lv9 달성","","")
 	ELSEIF LOCAL == 2
@@ -285,16 +285,16 @@ ELSE
 
 		CALL PRINT_ACHIEVEMENT(275,"여성의 숙명","히로인이라 해도 피할 수 없다…",5,"촉수에게 패배하여 유폐됐다","","")
 		CALL PRINT_ACHIEVEMENT(258,"잠자는 촉수 속의 공주님","프로 납치범 쿠파도 한 수 접었다",10,"유폐경험 5 돌파","※캐릭터 메이킹 소질：유폐 해금","")
-		CALL PRINT_ACHIEVEMENT(264,"처녀 빗치 애널광","감히 빼앗지 않겠다，그리 두지도 않겠다",10,"처녀인 채로 Ａ경험 10 돌파","처녀 빗치가 말이 되냐고？！","")
+		CALL PRINT_ACHIEVEMENT(264,"처녀 빗치 애널광","감히 빼앗지도，그리 두지도 않겠다",10,"처녀인 채로 Ａ경험 10 돌파","처녀 빗치가 말이 되냐고？！","")
 		CALL PRINT_ACHIEVEMENT(262,"음울(淫鬱) 허니문","모두 다같이 촉수의 아내",20,"【촉수의포로】인 인원이 3명 이상","※캐릭터 메이킹 소질：흑화 해금","")
 		;＠중국판(번호 중복으로 수정)
 		CALL PRINT_ACHIEVEMENT(279,"음마소녀조","우리들，더 이상 타락하지 않을게요♪",50,"【전락】인 인원이 3명 이상","","")
-		CALL PRINT_ACHIEVEMENT(280,"리얼돌 목장","이 세상에서 가장 무서운 것은 죽음이 아니다…",50,"【사지결손】인 인원이 3명 이상","적어도 팔다리 잘린 걸론 안 죽는다……","사람이 언제 죽는지 아는가？")
+		CALL PRINT_ACHIEVEMENT(280,"리얼돌 목장","세상에서 가장 무서운 건 죽음이 아니다",50,"【사지결손】인 인원이 3명 이상","적어도 팔다리 잘린 걸론 안 죽는다……","사람이 언제 죽는지 아는가？")
 
 	ELSEIF LOCAL == 3
 		CALL PRINT_ACHIEVEMENT(40,"init")
 		;게임 진척계
-		CALL PRINT_ACHIEVEMENT(269,"배틀 코스튬 마니아","예쁘게 다니고 싶어，나도 여자아이인 걸",10,"의상을 10가지 이상 구입","","")
+		CALL PRINT_ACHIEVEMENT(269,"배틀 코스튬 마니아","예쁘게 다니고 싶어，여자아이잖아？",10,"의상을 10가지 이상 구입","","")
 		CALL PRINT_ACHIEVEMENT(274,"패션 리더","오늘의 코디도 완벽♪",10,"의상을 30가지 이상 구입","","")
 		;ㄴㅋㄴㅋㄴ~
 		CALL PRINT_ACHIEVEMENT(256,"매지컬☆아이돌 육성 계획","키라☆",10,"매료경험 100 돌파","돔 공연 축하해……","")
@@ -306,7 +306,7 @@ ELSE
 		CALL PRINT_ACHIEVEMENT(276,"절체절명 히로인","이，이런 때에…！",5,"기력을 다하여 변신이 풀리고 말았다","","")
 		CALL PRINT_ACHIEVEMENT(277,"절대절정 히로인","이♥ 이러언 때헤엣♥♥",5,"절정의 쾌감으로 변신이 풀리고 말았다","","")
 
-		CALL PRINT_ACHIEVEMENT(271,"얼른 도와줄게！","분명 지금도 동료를 믿고 버티고 있을 거에요…",10,"사로잡힌 캐릭터를 구출했다","","※솔로 모드 불가능")
+		CALL PRINT_ACHIEVEMENT(271,"얼른 도와줄게！","분명 지금도 동료를 믿고 있을 거에요…",10,"사로잡힌 캐릭터를 구출했다","","※솔로 모드 불가능")
 		CALL PRINT_ACHIEVEMENT(272,"정신 차리세요！","돌이킬 수 없게 되기 전에 막아야 해！",10,"흑화한 캐릭터를 격파했다","솔직히 흑화풀린 마법소녀는 속죄강간을 해야…","※솔로 모드 불가능")
 		CALL PRINT_ACHIEVEMENT(273,"난 지금까지 무엇을…？","저 애는 조종당하고 있었을 뿐이야…！",10,"세뇌된 캐릭터의 세뇌를 풀었다","","※솔로 모드 불가능")
 		
@@ -385,16 +385,16 @@ numtext'=(numhead<=9 ? "0" # "")+TOSTR(numhead)
 numhead+=1
 
 IF GLOBAL:num
-	PRINTFORML 　%numtext% %achievename,28,LEFT%%desc,36,LEFT%+{bonus}
+	PRINTFORML 　%numtext% %achievename,28,LEFT%%desc,38,LEFT%+{bonus}
 ELSE
 	SETCOLOR 105,105,105
-	PRINTFORML 　%numtext% ？？？　　　　　　　　　　　%hint,36,LEFT%？
+	PRINTFORML 　%numtext% ？？？　　　　　　　　　　　%hint,38,LEFT%？
 	RESETCOLOR
 ENDIF
 IF GLOBAL:num
-	PRINTFORML 　　　　　　　　　　　　　　　　%otherA,36,RIGHT%
+	PRINTFORML 　　　　　　　　　　　　　　　　%otherA,38,RIGHT%
 ELSE
-	PRINTFORML 　　　　　　　　　　　　　　　　%otherB,36,RIGHT%
+	PRINTFORML 　　　　　　　　　　　　　　　　%otherB,38,RIGHT%
 ENDIF
 
 
