--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SYUZOKU.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SYUZOKU.ERB
@@ -69,8 +69,7 @@ ELSE
 		ELSE
 			PRINT 　☆
 		ENDIF
-		;글꼴을 굴림체로 바뀌어서 그런지 문자가 흐트러져서 글자수에 따라 공란을 줄이도록 수정
-		PRINTFORM %TALENTNAME:(LOCAL + LOCAL:2),24-STRLENSU(TALENTNAME:(LOCAL + LOCAL:2)),LEFT%  [{LOCAL}]  
+		PRINTFORM %TALENTNAME:(LOCAL + LOCAL:2),22,LEFT%  [{LOCAL}]  
 		IF LOCAL == 110 && FEAT_SELECT:LOCAL > 0
 			SETCOLOR 255,0,0
 			PRINT ◎
