--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_변신_디폴트_구상.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_변신_디폴트_구상.ERB
@@ -88,6 +88,7 @@ ELSEIF LOCAL:0 == 13 || LOCAL:0 == 17 || LOCAL:0 == 19 || LOCAL:0 == 23 || LOCAL
 	DATAFORM ！ 기합 넣고 가자！
 	DATAFORM ！ 반드시 이겨내 보일 테야！
 	DATAFORM ！ 끝을 내드리죠！
+	DATAFORM ！
 	DATAFORM ！ 봐주기 없기다！
 	DATAFORM ！ 악행은 여기까지야！
 	DATAFORM ！ 악행도 여기까지입니다！
@@ -105,10 +106,12 @@ ELSEIF LOCAL:0 == 14 || LOCAL:0 == 15
 	ENDDATA
 	STRDATA LOCALS:1
 	DATAFORM …♪
+	DATAFORM ……
 	DATAFORM …… 준비는 됐겠지？
 	DATAFORM …… 준비는 됐겠죠？
 	DATAFORM …… 그럼, 간다.
 	DATAFORM …… 그럼, 갑니다.
+	DATAFORM ……
 	DATAFORM …… 봐 주지 않을 거야.
 	DATAFORM …… 봐 주지 않는다고요？
 	DATAFORM …… 후딱 해치우자.
@@ -128,6 +131,7 @@ ELSEIF LOCAL:0 == 22 || LOCAL:0 == 28
 	DATAFORM .
 	DATAFORM . ……맡겨 줘.
 	DATAFORM . ……갑니다.
+	DATAFORM .
 	DATAFORM . ……빨리 끝내자.
 	DATAFORM . 목표를 확인…… 전투 개시.
 	DATAFORM , 간다아ー앗……
@@ -147,6 +151,7 @@ ELSEIF LOCAL:0 == 24
 	DATAFORM . 격의 차이를 보여주겠노라！
 	DATAFORM . 그럼, 가보자꾸나！
 	DATAFORM . 시작하지, 각오하게나！
+	DATAFORM .
 	DATAFORM . 봐주지 않겠다…… 와라！
 	DATAFORM . 이 몸이 나설 차례로다！
 	DATAFORM . 이 몸만 믿거라！
@@ -163,12 +168,15 @@ ELSE
 	DATAFORM ！
 	DATAFORM ！ 자, 간다！
 	DATAFORM ！ 자, 갑니다！
+	DATAFORM ！
 	DATAFORM ！ 여기까지다！
 	DATAFORM ！ 여기까지입니다！
+	DATAFORM .
 	DATAFORM … 덤벼보시지！
 	DATAFORM … 덤벼보시죠！
 	DATAFORM … 지지 않을 거야！
 	DATAFORM … 지지 않을 겁니다！
+	DATAFORM .
 	DATAFORM … 각오해라！
 	DATAFORM … 각오하시죠！
 	DATAFORM … 봐주지 않겠어！
