--- a/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SEIKAKU.ERB
+++ b/ERB/SYSTEM/캐릭터_메이킹_관련/FIRSTSETTING_CHARA_SEIKAKU.ERB
@@ -46,8 +46,7 @@ PRINTL 　　　　　　　　　　　　　　　 체　기　성　　공　
 FOR LOCAL, 0, SEIKAKU_NUM
 	SIF TALENT:ARG:(LOCAL + SEIKAKU_START) > 0
 		SETCOLOR 0,255,180
-	;0.394 버전까진 안 그랬는데 뉴스판와서 글자 정렬이 흐트러져서 직접 바꿈
-	PRINTFORM 　　[{LOCAL, 2}] %TALENTNAME:(LOCAL + SEIKAKU_START),(20-STRLENSU(TALENTNAME:(LOCAL + SEIKAKU_START))),LEFT%
+	PRINTFORM 　　[{LOCAL, 2}] %TALENTNAME:(LOCAL + SEIKAKU_START),20,LEFT%
 	RESETCOLOR
 	PRINTPLAIN 　
 	CALL SHOW_SEIKAKUHOSEI, LOCAL + SEIKAKU_START
