전투 화면 글자 위치 조정

--- a/ERB/SHOP.ERB
+++ b/ERB/SHOP.ERB
@@ -78,19 +78,19 @@ PRINTFORM INTERMISSION {DAY}일 째　　
 FONTBOLD
 SELECTCASE DAY % 7
 CASE 0
-	PRINT (日)
+	PRINT (일)
 CASE 1
-	PRINT (月)
+	PRINT (월)
 CASE 2
-	PRINT (火)
+	PRINT (화)
 CASE 3
-	PRINT (水)
+	PRINT (수)
 CASE 4
-	PRINT (木)
+	PRINT (목)
 CASE 5
-	PRINT (金)
+	PRINT (금)
 CASE 6
-	PRINT (土)
+	PRINT (토)
 ENDSELECT
 FONTREGULAR
 IF TIME == 0
