--- a/ERB/범용함수/COMMON_함수.ERB
+++ b/ERB/범용함수/COMMON_함수.ERB
@@ -9,6 +9,14 @@ SIF ARG == 0
 RETURN RESULT
 
 ;--------------------------------------------------
+;조금 더 긴 선 생성(트로피 표시 화면에서 사용)
+@SHORTLINE_2, ARG = 0
+PRINT ―――――――――――――――――――――――――――――――――――――
+SIF ARG == 0
+	PRINTL 
+RETURN RESULT
+
+;--------------------------------------------------
 ;LINEBLACKOUT
 ;줄 바꿈을 통한 화면 전환 연출
 @LB
