--- a/ERB/캐릭터관련/CHARA_STATUS.ERB
+++ b/ERB/캐릭터관련/CHARA_STATUS.ERB
@@ -1050,31 +1050,31 @@ IF ARG:1 == 0
 					PRINTFORM 《%CSTR:CCOUNT:0%》
 				ENDIF
 
-				PRINTFORM  Lv.{ABL:CCOUNT:레벨}
-				IF CFLAG:99 < 20
+				PRINTFORM  Lv.{ABL:CCOUNT:레벨} 
+				;월경 사이클
+				CALL PRINT_ESTRUS_CYCLE(CCOUNT)
+				SIF CFLAG:CCOUNT:15 > 0
+					PRINTFORM [우울]
+				IF CFLAG:CCOUNT:99 < 20
 					SETCOLOR 50, 255, 90
-				ELSEIF CFLAG:99 < 50
+				ELSEIF CFLAG:CCOUNT:99 < 50
 					SETCOLOR 40, 146, 73
 				ELSE
 					SETCOLOR 30, 102, 36
 				ENDIF
-				;월경 사이클
-				CALL PRINT_ESTRUS_CYCLE(CCOUNT)
-				SIF CFLAG:15 > 0
-					PRINTFORM [우울]
-				SIF CFLAG:99
+				SIF CFLAG:CCOUNT:99
 					PRINTFORM [피로 {CFLAG:CCOUNT:99}]
 				SETCOLOR 255,60,255
-				SIF CFLAG:241
+				SIF CFLAG:CCOUNT:241
 					PRINTFORM [피임 {CFLAG:CCOUNT:241}]
 				SETCOLOR 205,60,60
 				SIF CHECK_PREGNANT_F(CCOUNT) > 0
 					PRINTFORM [임신]
 				SETCOLOR 139,0,0
-				SIF TALENT:번식자루 > 0 
+				SIF TALENT:CCOUNT:번식자루 > 0 
 					PRINTFORM [번식자루]
 				SETCOLOR 170,0,0
-				SIF TALENT:사지결손 > 0
+				SIF TALENT:CCOUNT:사지결손 > 0
 					PRINTFORM [사지결손]
 				RESETCOLOR
 				PRINTL 
@@ -1327,7 +1327,7 @@ ELSEIF ARG:1 == 1
 	ENDIF
 
 	PRINTL 
-	CALLFORM COLORSENTENCE_BAR(BASENAME:2, 6, BASE:(ARG:0):성내성, MAXBASE:(ARG:0):성내성, 20)
+	CALLFORM COLORSENTENCE_BAR(BASENAME:2, 7, BASE:(ARG:0):성내성, MAXBASE:(ARG:0):성내성, 20)
 	PRINTL
 	;추가 게이지
 	LOCAL=0
@@ -1535,7 +1535,7 @@ ELSEIF ARG:1 == 2
 	PRINTL 
 	CALLFORM COLORSENTENCE_BAR(BASENAME:1, 6, BASE:(ARG:0):기력, MAXBASE:(ARG:0):기력, 20)
 	PRINTL 
-	CALLFORM COLORSENTENCE_BAR(BASENAME:2, 5, BASE:(ARG:0):성내성, MAXBASE:(ARG:0):성내성, 20)
+	CALLFORM COLORSENTENCE_BAR(BASENAME:2, 6, BASE:(ARG:0):성내성, MAXBASE:(ARG:0):성내성, 20)
 	PRINTL
 
 	
@@ -1577,7 +1577,7 @@ ELSEIF ARG:1 == 3
 	PRINTL 
 	CALLFORM COLORSENTENCE_BAR(BASENAME:1, 6, BASE:(ARG:0):기력, MAXBASE:(ARG:0):기력, 20)
 	PRINTL 
-	CALLFORM COLORSENTENCE_BAR(BASENAME:2, 5, BASE:(ARG:0):성내성, MAXBASE:(ARG:0):성내성, 20)
+	CALLFORM COLORSENTENCE_BAR(BASENAME:2, 6, BASE:(ARG:0):성내성, MAXBASE:(ARG:0):성내성, 20)
 	PRINTL 
 	PRINTFORML 전투력　　%BASENAME:10%：{MAXBASE:ARG:공격}  %BASENAME:11%：{MAXBASE:ARG:방어}  %BASENAME:12%：{MAXBASE:ARG:민첩}  %BASENAME:13%：{MAXBASE:ARG:지성}
 	CALL SHOW_STATUS_SEIKAKU, TARGET, 1
