흑화 관련 폴더 번역

--- a/ERB/캐릭터관련/CHARA_STATUS.ERB
+++ b/ERB/캐릭터관련/CHARA_STATUS.ERB
@@ -878,7 +878,7 @@ CASE 5
 
 	IF CONFIG_CHECK_OTHER_F(6) == 1 && (CSTR:ARG:45 != "" || CSTR:ARG:46 != "" || CSTR:ARG:47 != "" || CSTR:ARG:48 != "")
 		CALL SHORTLINE
-		PRINTL 　＊＊＊　　 비밀 개성 　 ＊＊＊
+		PRINTL 　＊＊＊　　 비밀 성벽 　 ＊＊＊
 		LOCAL=0
 		REPEAT 4
 			IF CSTR:ARG:(45 + COUNT) != ""
