--- a/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_102_슬라임（푸르푸르슬라임・Ａ）.ERB
+++ b/ERB/게임_내_전투처리/촉수데이터/잡몹적/TENTACLE_MOB_102_슬라임（푸르푸르슬라임・Ａ）.ERB
@@ -487,8 +487,7 @@ PRINTL 탱글……
 PRINTL 
 PRINTW
 PRINTFORML 시간이 지나 %PRINT_TRANSCALLNAME(TARGET)%의 몸은 비로소 자유롭게 풀려났지만, 
-PRINT 그 엉덩이 구멍에서는, 하나 둘 동실동실한 알이 품어져 있었다.
-PRINTL
+PRINTL 그 엉덩이 구멍에서는, 하나 둘 동실동실한 알이 품어져 있었다.
 PRINTFORML 세어가듯 %PRINT_TRANSCALLNAME(TARGET)%로부터 태어나는 그 알은, 
 CALL TENTACLE_ACCESS, "NAME"
 PRINTL 의 죽음을 애도하는 염주와도 같았다……
