--- a/ERB/지문/MESSAGE_BATTLE.ERB
+++ b/ERB/지문/MESSAGE_BATTLE.ERB
@@ -1739,7 +1739,7 @@ PRINTL 不意打ちを警戒しつつ撤退した
 
 ;時間切れ
 @MESSAGE_BATTLE_END_TIMEUP
-IF GETBATTLESITUATION("耐久戦")
+IF GETBATTLESITUATION("내구전")
 	PRINTL 何とか襲撃を耐えきったようだ・・・
 ELSE
 	PRINTL どうやら戦闘が長引き過ぎた様だ
